// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports yes/no contest allows voting for both yes and no 1`] = `
.c0 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  padding: 30px 20px 0;
}

.c1 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c2::before,
.c2::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c2::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c2::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c5 {
  padding: 0 10px;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

<div>
  <main
    class="sc-ZOsLE fjQwTk"
  >
    <div
      class="c0"
      id="contest-header"
    >
      <div
        class="sc-fotPbf iwtRsQ"
        id="audiofocus"
      >
        <h1
          aria-label="District 1 Ballot Measure 3."
          class="sc-eCImvq cmseZU"
        >
          <div
            class="c1"
          >
            District 1
          </div>
          Ballot Measure 3
        </h1>
        <p
          class="sc-dkPtyc XGKAk"
        >
          Vote 
          <strong>
            Yes
          </strong>
           or 
          <strong>
            No
          </strong>
          .
          <span
            class="screen-reader-only"
          >
            Should fishing be banned in all city owned lakes and rivers?
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="sc-fotPbf iwtRsQ"
            >
              <p
                class="sc-bqiQRQ bIFmdQ"
              >
                <span>
                  Should fishing be banned in all city owned lakes and rivers?
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        aria-multiselectable="true"
        class="c7"
        data-testid="contest-choices"
        role="listbox"
      >
        <button
          aria-label=" Yes on Ballot Measure 3"
          aria-selected="false"
          class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
          role="option"
          type="button"
        >
          <span
            class="sc-ezbkgU gcJsOl"
          >
            <span
              class="sc-caiKgP SOLan"
            >
              <span
                class="sc-iUKrWq hYcNmD"
              >
                <span
                  class="sc-cidCJl bYFEFC"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-iwjezw daAwbp"
                    height="100"
                    role="img"
                    viewBox="0 0 100 100"
                    width="100"
                  >
                    <path
                      d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="sc-iAKVOt gyainp"
              >
                <p
                  class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                >
                  Yes
                </p>
              </span>
            </span>
          </span>
        </button>
        <button
          aria-label=" No on Ballot Measure 3"
          aria-selected="false"
          class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
          role="option"
          type="button"
        >
          <span
            class="sc-ezbkgU gcJsOl"
          >
            <span
              class="sc-caiKgP SOLan"
            >
              <span
                class="sc-iUKrWq hYcNmD"
              >
                <span
                  class="sc-cidCJl bYFEFC"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-iwjezw daAwbp"
                    height="100"
                    role="img"
                    viewBox="0 0 100 100"
                    width="100"
                  >
                    <path
                      d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="sc-iAKVOt gyainp"
              >
                <p
                  class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                >
                  No
                </p>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`supports yes/no contest displays warning when attempting to change vote 1`] = `
.c0 {
  margin: 0 auto;
  width: 100%;
  padding: 1rem 30px 0.5rem;
}

.c6 {
  margin: 0 auto;
  width: 100%;
  padding: 30px 20px 0;
}

.c1 {
  text-transform: uppercase;
  font-size: 0.85rem;
  font-weight: 600;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  overflow: auto;
}

.c2::before,
.c2::after {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 0.25rem;
  content: '';
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c2::before {
  top: 0;
  opacity: 0;
  background: linear-gradient( to bottom, rgb(177,186,190) 0%, transparent 100% );
}

.c2::after {
  bottom: 0;
  opacity: 0;
  background: linear-gradient( to bottom, transparent 0%, rgb(177,186,190) 100% );
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.c4 {
  margin: 0 auto;
  width: 100%;
  padding: 0.25rem 20px 0;
}

.c5 {
  padding: 0 10px;
}

.c7 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

<div>
  <main
    class="sc-ZOsLE fjQwTk"
  >
    <div
      class="c0"
      id="contest-header"
    >
      <div
        class="sc-fotPbf iwtRsQ"
        id="audiofocus"
      >
        <h1
          aria-label="District 1 Ballot Measure 3."
          class="sc-eCImvq cmseZU"
        >
          <div
            class="c1"
          >
            District 1
          </div>
          Ballot Measure 3
        </h1>
        <p
          class="sc-dkPtyc XGKAk"
        >
          Vote 
          <strong>
            Yes
          </strong>
           or 
          <strong>
            No
          </strong>
          .
          <span
            class="screen-reader-only"
          >
            Should fishing be banned in all city owned lakes and rivers?
            To navigate through the contest choices, use the down button. To move to the next contest, use the right button.
          </span>
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="sc-fotPbf iwtRsQ"
            >
              <p
                class="sc-bqiQRQ bIFmdQ"
              >
                <span>
                  Should fishing be banned in all city owned lakes and rivers?
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        aria-multiselectable="true"
        class="c7"
        data-testid="contest-choices"
        role="listbox"
      >
        <button
          aria-label="Selected, Yes on Ballot Measure 3"
          aria-selected="true"
          class="sc-iJKOzS jNwvxi sc-jcFkyM bpoIao"
          role="option"
          type="button"
        >
          <span
            class="sc-ezbkgU gcJsOl"
          >
            <span
              class="sc-caiKgP SOLan"
            >
              <span
                class="sc-iUKrWq hYcNmD"
              >
                <span
                  class="sc-cidCJl bdaONb"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-iwjezw daAwbp"
                    height="100"
                    role="img"
                    viewBox="0 0 100 100"
                    width="100"
                  >
                    <path
                      d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="sc-iAKVOt gyainp"
              >
                <p
                  class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                >
                  Yes
                </p>
              </span>
            </span>
          </span>
        </button>
        <button
          aria-label=" No on Ballot Measure 3"
          aria-selected="false"
          class="sc-iJKOzS ebzhGa sc-jcFkyM itMNA-D"
          role="option"
          type="button"
        >
          <span
            class="sc-ezbkgU gcJsOl"
          >
            <span
              class="sc-caiKgP SOLan"
            >
              <span
                class="sc-iUKrWq hYcNmD"
              >
                <span
                  class="sc-cidCJl bYFEFC"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-iwjezw daAwbp"
                    height="100"
                    role="img"
                    viewBox="0 0 100 100"
                    width="100"
                  >
                    <path
                      d="M89.7038 10.1045C88.2094 8.40006 85.759 8.40006 84.2646 10.1045L39.0198 61.5065L15.719 34.8471C14.2245 33.1364 11.7906 33.1364 10.2852 34.8471L2.12082 44.1186C0.626395 45.8105 0.626395 48.5951 2.12082 50.2996L36.2782 89.3708C37.7727 91.0628 40.2066 91.0628 41.7175 89.3708L97.8627 25.5632C99.3791 23.8587 99.3791 21.0679 97.8627 19.3572L89.7038 10.1045Z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="sc-iAKVOt gyainp"
              >
                <p
                  class="sc-dkPtyc XGKAk sc-efQUeY hTUHyO"
                >
                  No
                </p>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </main>
</div>
`;
